add .so file under dir libs

--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,7 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+            jniLibs.srcDirs = ['libs']
         }
     }
 
