--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
      found in the LICENSE file.
  -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"  android:versionCode="1" android:versionName="1.1"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.chromium.content_shell_apk">
 
     <application android:name="ContentShellApplication"
